All_Component_DX/force-app/main/default/objects/Activity_Product__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <referenceTo>Activity_Master__c</referenceTo>
    <relationshipLabel>Activity Products</relationshipLabel>
    <relationshipName>Activity_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>