All_Component_DX/force-app/main/default/objects/Activity_Product__c/fields/Activity_Product__c.field-meta.xml
<CustomField>
    <fullName>Activity_Product__c</fullName>
    <formula>TEXT(Activity__r.Activity_Type__c)+ &quot; : &quot; +
IF(LEN(Product__r.Id) &gt; 0,Product__r.Name,
IF(LEN(TEXT( Product_Line__c )) &gt; 0,TEXT(Product_Line__c),
IF(LEN(TEXT( Product_Family__c )) &gt; 0,TEXT(Product_Family__c),&#39;&#39;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Product</label>
    <type>Text</type>
</CustomField>