All_Component_DX/force-app/main/default/objects/Activity_Product__c/validationRules/SVMX_Product_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMX_Product_Validation</fullName>
    <active>true</active>
    <description>Product Validation</description>
    <errorConditionFormula>IF(LEN(Product__r.Id) &gt; 0, IF(OR(LEN(TEXT(Product_Line__c)) &gt; 0, LEN(TEXT(Product_Family__c)) &gt; 0), TRUE, FALSE), IF(LEN(TEXT(Product_Line__c)) &gt; 0, IF(LEN(TEXT(Product_Family__c)) &gt; 0, TRUE, FALSE), IF(LEN(TEXT(Product_Family__c)) &gt; 0, FALSE, TRUE)))</errorConditionFormula>
    <errorMessage>Activity Product must be defined for only one of Product, Product Family, or Product Line.</errorMessage>
</ValidationRule>